--- a/app/src/main/res/layout/dialog_device_locator.xml
+++ b/app/src/main/res/layout/dialog_device_locator.xml
@@ -74,7 +74,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Device Id: 0123456789"
+        android:text="Device Id: 0123456"
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toStartOf="@+id/ivWifi"
         app:layout_constraintHorizontal_bias="0.0"
@@ -85,7 +85,7 @@
         android:id="@+id/tvCurrentStatus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Current Status: Disconnected"
+        android:text="@string/dialog_connection_status"
         android:textColor="#FFFFFF"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/ivWifi"
